# clea-examples

./: .gitignore  Dockerfile  README.md  nginx.conf
appliance-sensor-plot-example/: Dockerfile  package-lock.json  (+2 more)
cam-people-counter-example/: CMakeLists.txt  cam-people-counter-example.pro
cam-people-counter-example/device/: CMakeLists.txt  main.cpp
cam-people-counter-example/include/: peopleCounter.hpp
cam-people-counter-example/include/utils/: images_capture.h
cam-people-counter-example/src/: main.cpp  peopleCounter.cpp
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/: CMakeLists.txt  Kconfig  eva_dts_engine.c  evadtsEngine.c
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/data/: evoca_kalea_report_1.txt  evoca_kalea_report_2.txt  report_2022-05-26_09_02_40.txt
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/include/: eva_dts_engine.h  evadtsConfig.h  evadtsEngine.h  evadtsHandler.h  evadtsParser.h  evadtsReport.h  evadtsRetriever.h  evadtsSerial.h
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/include/data/: evadtsDataBlock.h  evadtsDataBlockList.h  evadtsPayloadRaw.h  evadtsSensorList.h  link.h  paSensorList.h  saSensorList.h  stringList.h
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/include/ddcmp/: ackMessage.h  dataBlockMessage.h  dataHeaderMessage.h  dateReadMessage.h  ddcmpMessage.h  stackMessage.h  wayMessage.h
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/include/repository/: engineRepository.h  paRepository.h  saRepository.h
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/include/sensor/: evadtsAudit.h  evadtsSensor.h  idSensor.h  paSensor.h  saSensor.h
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/src/: evadtsConfig.c  evadtsHandler.c  evadtsParser.c  evadtsReport.c  evadtsRetriever.c  evadtsSerial.c
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/src/data/: evadtsDataBlock.c  evadtsDataBlockList.c  evadtsPayloadRaw.c  evadtsSensorList.c  link.c  paSensorList.c  saSensorList.c  stringList.c
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/src/ddcmp/: ackMessage.c  dataBlockMessage.c  dataHeaderMessage.c  dataReadMessage.c  ddcmpMessage.c  stackMessage.c  wayMessage.c
eva-dts-table-top/easy-edge-firmware/components/eva_dts_engine/test/: CMakeLists.txt  component.mk  eva-dts-engine_test.cpp
(+313 files in other folders)
